--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -8,9 +8,11 @@
     --headerColor: #000;
     --bodyTextColor: #111;
     --bodyTextColorWhite: #fff;
-    --accent: #7070ff;
+    --accent: #6cb274;
+    --emphasis: rgba(108, 178, 116, .2);
     /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
+    --topperFontSizeSmall: clamp(0.5rem, 1vw, 0.75rem);
     /* 31px - 49px */
     --headerFontSize: clamp(1.9375rem, 3.9vw, 3.0625rem);
     --bodyFontSize: 1rem;
@@ -24,14 +26,23 @@
     letter-spacing: 0.1em;
     font-size: var(--topperFontSize);
     line-height: 1.2em;
-    font-weight: 700;
+    font-weight: 200;
     color: var(--primary);
     text-align: inherit;
+    font-family: "Nexa", Arial, sans-serif;
+  }
+  .topper-small {
+    display: block;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: var(--topperFontSizeSmall);
+    font-family: "Nexa", Arial, sans-serif;
   }
   .title {
     position: relative;
     margin: 0 0 1rem 0;
-    max-width: 43.75rem;
+    max-width: 50rem;
     font-size: var(--headerFontSize);
     line-height: 1.2em;
     font-weight: 200;
@@ -48,40 +59,33 @@
     text-align: inherit;
   }
   .button-solid {
-    z-index: 1;
-    position: relative;
-    display: inline-block;
-    background-color: var(--primary);
+    margin-bottom: 1rem;
+    height: initial;
+    border: 1px solid #000;
+    line-height: 2.3rem;
+    padding: 0 1.25rem;
     width: auto;
-    padding: 0 1.875rem;
+    align-self: flex-start;
+    color: var(--bodyTextColor);
+    box-shadow: inset 0 -6px var(--emphasis);
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 1rem;
-    line-height: 3.125em;
-    font-weight: 900;
-    color: #000;
-    transition: color 0.3s;
-    transition-delay: 0.1s;
-    text-align: center;
+    background-color: #fff;
+    transition: all 0.3s;
   }
   .button-solid:hover {
     color: #fff;
+    background-color: var(--primary);
+    box-shadow: none;
   }
-  .button-solid:hover:before {
-    width: 100%;
-  }
-  .button-solid:before {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    opacity: 1;
-    display: block;
-    background-color: #000;
-    height: 100%;
-    width: 0;
-    transition: width 0.3s;
+  .button {
+    padding-top: 0.5rem;
+    height: initial;
+    line-height: 2.3rem;
+    width: auto;
+    align-self: flex-start;
+    color: var(--bodyTextColor);
+    text-decoration: underline;
+    transition: all 0.3s;
   }
   .hide-on-mobile {
     display: none;
@@ -96,6 +100,22 @@
     display: none;
   }
 }
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+  body.dark-mode .button-solid {
+    color: var(--bodyTextColorWhite);
+    background-color: var(--dark);
+    box-shadow: inset 0 -6px var(--emphasis-dark);
+  }
+  body.dark-mode .button-solid:hover {
+    color: var(--bodyTextColor);
+    background-color: var(--primaryLight);
+    box-shadow: none;
+  }
+  body.dark-mode .button {
+    color: var(--bodyTextColorWhite);
+  }
+}
 /* Fonts and general styles */
 @media only screen and (min-width: 0rem) {
   body,
@@ -103,7 +123,7 @@
     margin: 0;
     overflow-x: hidden;
     padding: 0;
-    font-family: "Nexa", Arial, sans-serif;
+    font-family: "Baskervville", "Georgia", serif;
     font-size: 100%;
     color: var(--bodyTextColor);
   }
@@ -130,14 +150,21 @@
   h6 {
     margin: 0;
     color: var(--headerColor);
-    font-family: "Nexa", Arial, sans-serif;
+    font-family: "Baskervville", "Georgia", serif;
   }
-  p,
+  p {
+    font-family: "Baskervville", "Georgia", serif;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 200;
+    line-height: 1.5em;
+  }
   li,
   a {
     margin: 0;
     font-size: 1rem;
     line-height: 1.5em;
+    font-family: "Nexa", Arial, sans-serif;
   }
   p,
   li {
@@ -167,6 +194,14 @@
     font-style: normal;
     font-weight: 900;
     src: url("/assets/fonts/Nexa-Heavy.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+  }
+  /* baskervville-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: "Baskervville";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/assets/fonts/baskervville-v19-latin-regular.woff2") format("woff2"), url("/assets/fonts/baskervville-v19-latin-regular.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
   }
 }
 /* Reset Margins */
