--- a/src/assets/sass/dark.scss
+++ b/src/assets/sass/dark.scss
@@ -11,6 +11,7 @@
         --dark: #1d283a;
         --medium: #616975;
         --accent: #e8eaeb;
+        --emphasis-dark: #758E4F;
     }
 
     body.dark-mode {
