--- a/src/assets/css/dark.css
+++ b/src/assets/css/dark.css
@@ -5,9 +5,10 @@
 /* Mobile */
 @media only screen and (min-width: 0rem) {
   :root {
-    --dark: #000;
-    --medium: #111;
-    --accent: #fff;
+    --dark: #1d283a;
+    --medium: #616975;
+    --accent: #e8eaeb;
+    --emphasis-dark: #758E4F;
   }
   body.dark-mode {
     background-color: var(--dark);
