--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -106,6 +106,7 @@
     color: var(--bodyTextColorWhite);
     background-color: var(--dark);
     box-shadow: inset 0 -6px var(--emphasis-dark);
+    border: 1px solid var(--bodyTextColorWhite);
   }
   body.dark-mode .button-solid:hover {
     color: var(--bodyTextColor);
