feat(ui): Header / Footer effect

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -15,6 +15,6 @@
         <a href="/blog" class="link">Blogs</a>
       </li>
     </ul>
-    <span class="copyright">© 2024 Copyright</span>
+    <span class="copyright">© 2024 - {% year %} Copyright</span>
   </div>
 </footer>
