--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -35,28 +35,16 @@
     font-weight: 200;
     color: var(--bodyTextColor);
     position: relative;
+    transition: box-shadow 0.3s;
   }
-  #footer .link:hover:before {
-    width: 100%;
-  }
-  #footer .link:before {
-    /* top right box */
-    content: "";
-    width: 0%;
-    height: 0.1875rem;
-    background: var(--bodyTextColor);
-    opacity: 1;
-    position: absolute;
-    display: block;
-    bottom: -2/16rem;
-    left: 0;
-    transition: width 0.3s;
+  #footer .link:hover {
+    box-shadow: inset 0 -6px var(--emphasis);
   }
   #footer .copyright {
     /* 14px - 16px */
     font-size: clamp(0.875rem, 1.6vw, 1rem);
     text-align: center;
-    color: #a0a3bd;
+    color: var(--bodyTextColor);
     display: block;
     /* 20px - 28px */
     margin: clamp(1.25rem, 2.8vw, 1.75rem) auto 0;
@@ -85,12 +73,15 @@
   body.dark-mode #footer .link {
     color: #fff;
   }
-  body.dark-mode #footer .link:before {
-    background: #fff;
+  body.dark-mode #footer .link:hover {
+    box-shadow: inset 0 -6px var(--emphasis-dark);
   }
   body.dark-mode #footer .ul {
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
+  }
+  body.dark-mode #footer .copyright {
+    color: #fff;
   }
 }
 
