--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -321,28 +321,17 @@
     transition-delay: 0.45s;
   }
   #navigation .li-link {
-    font-size: 1.5rem;
-    line-height: 1.2em;
+    font-size: clamp(1rem, 1.55vw, 1.25rem);
+    line-height: 1.5em;
     text-decoration: none;
     margin: 0;
-    color: var(--headerColor);
+    color: var(--bodyTextColor);
     display: inline-block;
     position: relative;
+    transition: box-shadow 0.3s;
   }
-  #navigation .li-link:before {
-    /* active state underline */
-    content: "";
-    width: 100%;
-    height: 1px;
-    background: currentColor;
-    opacity: 1;
-    display: none;
-    position: absolute;
-    bottom: -0.125rem;
-    left: 0;
-  }
-  #navigation .li-link.active:before {
-    display: block;
+  #navigation .li-link:hover {
+    box-shadow: inset 0 -6px var(--emphasis);
   }
   #navigation .button-solid {
     display: none;
@@ -707,20 +696,17 @@
     flex: none;
   }
   #navigation .li-link {
-    font-size: 1rem;
+    font-size: clamp(1rem, 1.55vw, 1.25rem);
     line-height: 1.5em;
     text-decoration: none;
     margin: 0;
-    color: var(--headerColor);
+    color: var(--bodyTextColor);
     display: block;
     position: relative;
-    transition: color 0.3s;
+    transition: color 0.3s, box-shadow 0.3s;
   }
   #navigation .li-link:hover {
-    color: var(--primary);
-  }
-  #navigation .li-link.active {
-    color: var(--primary);
+    box-shadow: inset 0 -6px var(--emphasis);
   }
   #navigation .button-solid {
     font-size: 1rem;
