--- a/src/assets/sass/footer.scss
+++ b/src/assets/sass/footer.scss
@@ -41,25 +41,10 @@
             font-weight: 200;
             color: var(--bodyTextColor);
             position: relative;
+            transition: box-shadow 0.3s;
 
             &:hover {
-                &:before {
-                    width: 100%;
-                }
-            }
-
-            &:before {
-                /* top right box */
-                content: "";
-                width: 0%;
-                height: calc(3 / 16 * 1rem);
-                background: var(--bodyTextColor);
-                opacity: 1;
-                position: absolute;
-                display: block;
-                bottom: -2/16rem;
-                left: 0;
-                transition: width 0.3s;
+                box-shadow: inset 0 -6px var(--emphasis);
             }
         }
 
@@ -67,7 +52,7 @@
             /* 14px - 16px */
             font-size: clamp(0.875rem, 1.6vw, 1rem);
             text-align: center;
-            color: #a0a3bd;
+            color: var(--bodyTextColor);
             display: block;
             /* 20px - 28px */
             margin: clamp(1.25rem, 2.8vw, 1.75rem) auto 0;
@@ -101,13 +86,16 @@
             background-color: rgba(0, 0, 0, 0.2);
             .link {
                 color: #fff;
-                &:before {
-                    background: #fff;
+                &:hover {
+                    box-shadow: inset 0 -6px var(--emphasis-dark);
                 }
             }
             .ul {
                 border-top: 1px solid #fff;
                 border-bottom: 1px solid #fff;
+            }
+            .copyright {
+                color: #fff;
             }
         }
     }
